--- a/templates/find_compost.html
+++ b/templates/find_compost.html
@@ -26,9 +26,9 @@
 
 
 {% block ListItems %}
-    <li><a href="/">Dashboard</a></li>
-    <li><a href="/composts">Composts</a></li>
-    <li><a href="/settings">Settings</a></li>
+{#    <li><a href="/">Dashboard</a></li>#}
+{#    <li><a href="/composts">Composts</a></li>#}
+{#    <li><a href="/settings">Settings</a></li>#}
     {#    <li><a href="/init_db">Init DB</a></li>#}
 {% endblock %}
 
