area addition to dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -22,7 +22,7 @@
 
 {% block body %}
     <h4>Name:{{ compost_device.name }} Country: {{ compost_device.country }} Region: {{ compost_device.region }}
-        Area: {{ compost_device.region }} IP: {{ compost_device.ip }}</h4>
+        Area: {{ compost_device.area }} IP: {{ compost_device.ip }}</h4>
     <br>
     <div class="row">
         <div class="col-md-12">
