--- a/templates/scada.html
+++ b/templates/scada.html
@@ -12,7 +12,7 @@
     {#    <li><a href="/login">{{ login }}</a></li>#}
 {% endblock %}
 
-
+{##test#}
 {% block ListItems %}
     {#    <li><a href="/">Dashboard</a></li>#}
     {#    <li><a href="/composts">Composts</a></li>#}
