--- a/templates/scada2.html
+++ b/templates/scada2.html
@@ -65,7 +65,7 @@
 {% endblock %}
 {% block javascript %}
     <script type="text/javascript">
-        var socket = io.connect();
+        var socket = io.connect('http://' + document.domain + ':' + location.port);
         socket.on('dashboard', function (data) {
             $("#Vent").html(function () {
                 if (!!parseInt(data['variables']['Vent'])) {
