--- a/templates/scada2.html
+++ b/templates/scada2.html
@@ -2,10 +2,10 @@
 
 {% block pagetitle %}Overview{% endblock %}
 
-{% block sidabartitlelink %}"/Compost_Ilioupoli"{% endblock %}
+{% block sidabartitlelink %}"/"{% endblock %}
 {% block SideBarTitle %}Overview{% endblock %}
 
-{% block titlelink %}"/Compost_Ilioupoli"{% endblock %}
+{% block titlelink %}"/"{% endblock %}
 {% block maintitle %}Overview{% endblock %}
 
 {% block LOGIN %}
