--- a/templates/Layout/IndexLayout.html
+++ b/templates/Layout/IndexLayout.html
@@ -61,7 +61,7 @@
 
     {#              HIGHCHARTS             #}
     <script src="/static/highcharts/highcharts.js"></script>
-    <script src="/static/highcharts/exporting.js"></script>
+{#    <script src="/static/highcharts/exporting.js"></script>#}
     <script src="/static/highcharts/boost.js"></script>
     <script src="/static/js/create_chart.js"></script>
 
