--- a/templates/scada2.html
+++ b/templates/scada2.html
@@ -22,7 +22,7 @@
 
 {% block body %}
     <div class="row">
-        <div class="col-sm-10" style="display:inline-block; margin: 0 auto; position:relative; ">
+        <div class="col-md-10-10" style="display:inline-block; margin: 0 auto; position:relative; ">
             <img id="compostImg" src="/static/images/compostArt.jpg" class="img-responsive"
                  alt="Responsive image"/>
             {#            <canvas id="myCanvas" style="padding: 10px; position:relative; z-index:5;"></canvas>#}
